# lit-review

./: .gitignore  README.md  README_lit_harvest.md  comparison_plots.py  config.example.json  config.media_attributes_1000.json  draft.md  embedding_merge.py  feature_embedding_metadata.py  feature_embedding_tsne.py  goal.md  known_feature_similarity.py  lit_extract.py  lit_harvest.py  lit_log_summary.py  lit_pdf_service.py  lit_relevance.py  lit_synthesize.py  lit_taxonomy.py  pyproject.toml  test_comparison_plots.py  test_embedding_merge.py  test_feature_embedding_metadata.py  test_feature_embedding_tsne.py  test_known_feature_similarity.py  test_lit_extract.py  test_lit_harvest.py  test_lit_log_summary.py  test_lit_relevance.py  test_lit_synthesize.py  test_lit_taxonomy.py  test_lit_ui_api.py  test_lit_ui_store.py
extract_configs/: 00_extract_semeval_2020_task11_pdf.json  01_curate_semeval_2020_task11_pdf.json  02_finalize_semeval_2020_task11_pdf.json  03_annotate_media_attributes_v3.json
harvest_configs/: config.semeval_2020_task11_sanity.json
lit_review.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lit_review_ui/: __init__.py  app.py  jobs.py  store.py
lit_review_ui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
lit_review_ui/frontend/src/: api.ts  main.tsx  styles.css  ui.test.tsx  ui.tsx
sanity_checks/geneva_emotion_wheel_1_0/: README.md  expected_features.csv
sanity_checks/geneva_emotion_wheel_2_0/: README.md  expected_features.csv
sanity_checks/semeval_2018_task1_emotion/: README.md  expected_features.csv
sanity_checks/semeval_2020_task11/: README.md  compare_expected_features.py  expected_features.csv  plot_expected_features.py
scripts/: embedding_merge_agm_v5_lexical_cleanup.sh  known_feature_similarity_geneva_emotion_wheel_lexical_cut_controlled.sh  known_feature_similarity_semeval2020_lexical_cut_controlled.sh
synth_configs/: 00_convert_semeval_2020_task11_sanity.json  01_index_semeval_2020_task11_sanity.json
