[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lit-review"
version = "0.1.0"
description = "API-first literature collection and evidence-bound review synthesis tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pypdf>=5.0.0",
    "PyMuPDF>=1.24.0",
]

[project.optional-dependencies]
dev = []

[project.scripts]
lit-harvest = "lit_harvest:main"
lit-synthesize = "lit_synthesize:main"

[tool.setuptools]
py-modules = ["lit_harvest", "lit_pdf_service", "lit_synthesize"]

[tool.uv]
package = true
